# wave

./: README.md
blitz_wave/2d/ctcs/periodic/: CMakeLists.txt  wave_periodic.cc
cylinder_fem/: .cproject  .project  CMakeLists.txt  constructor.h  functions.h  main.cc  output.h  run.h  setup_system.h  solve_U_and_V.h
cylinder_fem/mesh/: benchmark.geo
cylinder_fem/results/: solution-001.vtu  video.ogv
periodic-wave-weno4-2d/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  convergence.ipynb  convergence.py  ssprk54convergence.ipynb
periodic-wave-weno4-2d-spherical/: CMakeLists.txt  README.md
periodic-wave-weno4-2d-spherical/include/: Headers.h  Weno432.h  cell_properties.h
periodic-wave-weno4-2d-spherical/source/: L_norm.cc  cell_properties.cc  cls.cc  compute_cell_properties.cc  compute_rhs.cc  compute_smoothness_indicators.cc  compute_time_step.cc  constructor.cc  copy_data.cc  evaluate_weno_gradient_x.cc  exact_solution.cc  initial_condition.cc  initialize.cc  lu.cc  main.cc  make_grid.cc  output_results.cc  reconstruct.cc  run.cc  setup_system.cc  solve_euler.cc  solve_ssprk33.cc
petsc_wave/: makefile  wave  wave2.cc
ref/: Makefile  array.c  dissipation.c  error_norms.c  hype.c  hype.h  initial_condition.c  initialize_solution.c  ke_disspation.py  kinetic_energy.c  monitor_function.c  pde.c  plot_tecplot.py  reconstruction.c  rhs_function.c
wave-linear/: .command.txt  CMakeLists.txt  job_script
wave-quadratic/: .gitignore  CMakeLists.txt  job_scipt
wave-weno4-parallel-2d/: .gitignore  CMakeLists.txt  README.md
(+98 files in other folders)
